room creation logic

--- a/CookingGameApp/app/src/main/res/layout/activity_hostplayerpage.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_hostplayerpage.xml
@@ -7,6 +7,7 @@
 
     <!-- Background Image -->
     <ImageView
+        android:id="@+id/imageBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/hostbackground"
