--- a/CookingGameApp/app/src/main/res/layout/activity_menu.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -68,7 +69,19 @@
                 android:scaleType="fitXY"
                 android:background="@null"
                 android:contentDescription="Instructions" />
+
         </FrameLayout>
+
     </LinearLayout>
+    <!-- Settings Button at Top Right -->
+    <ImageButton
+        android:id="@+id/buttonSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:layout_gravity="top|end"
+        android:layout_margin="16dp"
+        android:background="@null"
+        android:contentDescription="Settings"
+        android:src="@drawable/settings" />
 
 </FrameLayout>
