--- a/CookingApp/app/src/main/res/values/styles.xml
+++ b/CookingApp/app/src/main/res/values/styles.xml
@@ -13,5 +13,14 @@
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
-
+    <style name="InstructionText">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/baloo_regular</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:shadowColor">#9C1D2E</item>
+        <item name="android:shadowDx">2</item>
+        <item name="android:shadowDy">5</item>
+        <item name="android:shadowRadius">5</item>
+    </style>
 </resources>
