--- a/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
@@ -32,10 +32,12 @@
 
     <ImageView
         android:id="@+id/imageChicken"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/chicken"
-        android:contentDescription="Chicken" />
+        android:layout_margin="8dp"
+        android:visibility="visible" />
+
 
     <ImageView
         android:id="@+id/imageKnife"
