--- a/CookingGameApp/app/src/main/res/layout/activity_instruction.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_instruction.xml
@@ -33,8 +33,7 @@
             android:gravity="center"
             android:fontFamily="@font/baloo" />
 
-        <!-- Start Game button styled as text -->
-
+        <!-- Instructions -->
         <TextView
             android:id="@+id/instructionText"
             android:layout_width="match_parent"
@@ -48,21 +47,8 @@
             android:textColor="#9D5A40"
             android:textSize="15sp"
             android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/startGameButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="40dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/baloo"
-            android:text="Start Game"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
     </FrameLayout>
+
     <!-- Back Button (bottom-left) -->
     <ImageButton
         android:id="@+id/backButton"
