--- a/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
@@ -7,15 +7,14 @@
     tools:context=".MainActivity">
 
     <!-- Background -->
-
-    <!-- Draggable Ingredients / Cookingware -->
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@null"
         android:scaleType="centerCrop"
+        android:contentDescription="@null"
         android:src="@drawable/background" />
 
+    <!-- Draggable Items -->
     <ImageView
         android:id="@+id/imageCuttingboard"
         android:layout_width="100dp"
@@ -36,8 +35,8 @@
         android:layout_height="80dp"
         android:src="@drawable/chicken"
         android:layout_margin="8dp"
-        android:visibility="visible" />
-
+        android:visibility="visible"
+        android:contentDescription="Chicken" />
 
     <ImageView
         android:id="@+id/imageKnife"
@@ -46,51 +45,6 @@
         android:src="@drawable/knife"
         android:contentDescription="Knife" />
 
-    <SeekBar
-        android:id="@+id/fireSeekBar"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:max="2"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
-
-    <!--    <ImageView-->
-<!--        android:id="@+id/imagePot"-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:src="@drawable/pot"-->
-<!--        android:contentDescription="Pot" />-->
-    <FrameLayout
-        android:id="@+id/potContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-        <ImageView
-            android:id="@+id/imagePot"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/pot"
-            android:layout_gravity="center" />
-
-        <ImageView
-            android:id="@+id/imageRedFill"
-            android:layout_width="70dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/filler"
-            android:translationY="-25dp"
-            android:visibility="invisible" />
-
-        <ImageView
-            android:id="@+id/imageSpoon"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ladle" />
-    </FrameLayout>
-
     <ImageView
         android:id="@+id/imageLemon"
         android:layout_width="100dp"
@@ -98,21 +52,55 @@
         android:src="@drawable/lemon"
         android:contentDescription="Lemon" />
 
-    <!-- Bottom Center Timer with overlay text -->
     <ImageView
         android:id="@+id/imageStove"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:contentDescription="Stove"
-        android:src="@drawable/stove" />
+        android:src="@drawable/stove"
+        android:contentDescription="Stove" />
 
+    <ImageView
+        android:id="@+id/imagePot"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/pot"
+        android:contentDescription="Pot" />
+
+    <ImageView
+        android:id="@+id/imageSpoon"
+        android:layout_width="50dp"
+        android:layout_height="70dp"
+        android:layout_margin="8dp"
+        android:visibility="visible"
+        android:src="@drawable/ladle"
+        android:contentDescription="Spoon" />
+
+    <!-- Optional visual (inactive) -->
+    <ImageView
+        android:id="@+id/imageRedFill"
+        android:layout_width="70dp"
+        android:layout_height="100dp"
+        android:src="@drawable/filler"
+        android:translationY="-25dp"
+        android:visibility="invisible"
+        android:contentDescription="Fill Level" />
+
+    <SeekBar
+        android:id="@+id/fireSeekBar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:max="2"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp" />
+
+    <!-- Timer Section -->
     <FrameLayout
         android:layout_width="250dp"
         android:layout_height="160dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="30dp">
 
-        <!-- Background image -->
         <ImageView
             android:id="@+id/imageTimer"
             android:layout_width="match_parent"
@@ -121,7 +109,6 @@
             android:scaleType="fitCenter"
             android:contentDescription="Timer" />
 
-        <!-- Player 3 label -->
         <TextView
             android:id="@+id/player3Label"
             android:layout_width="match_parent"
@@ -136,7 +123,6 @@
             android:gravity="center"
             android:fontFamily="@font/baloo" />
 
-        <!-- Countdown Timer -->
         <TextView
             android:id="@+id/countdownText"
             android:layout_width="match_parent"
@@ -152,7 +138,7 @@
             android:textStyle="bold" />
     </FrameLayout>
 
-    <!-- Left Basket with Player 1 -->
+    <!-- Basket Left -->
     <FrameLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -184,7 +170,7 @@
             android:shadowRadius="2" />
     </FrameLayout>
 
-    <!-- Right Basket with Player 2 -->
+    <!-- Basket Right -->
     <FrameLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
