--- a/CookingGameApp/app/src/main/res/layout/activity_endscreen.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_endscreen.xml
@@ -3,180 +3,120 @@
     android:id="@+id/endScreenLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFE4C4"> <!-- Light peach background -->
+    android:background="#FFE4C4">
 
-    <!-- Food and characters (positioned absolutely for visual match) -->
+    <!-- Background image -->
     <ImageView
-        android:id="@+id/imgCarrot"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/carrot"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="100dp" />
+        android:id="@+id/imageBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/hostbackground" />
 
-    <ImageView
-        android:id="@+id/imgChickenLeg"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_below="@id/imgCarrot"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/chickenleg" />
-
-    <ImageView
-        android:id="@+id/imgAvocado"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_below="@id/imgChickenLeg"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="21dp"
-        android:src="@drawable/avocado" />
-
-    <ImageView
-        android:id="@+id/imgTomato"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/tomato" />
-
-    <ImageView
-        android:id="@+id/imgLemon"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_above="@id/imgTomato"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="59dp"
-        android:src="@drawable/lemon" />
-
-    <ImageView
-        android:id="@+id/imgChicken"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/chicken" />
-
-    <ImageView
-        android:id="@+id/imgPuddingBaby"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="0dp"
-        android:src="@drawable/pudding_baby" />
-
+    <!-- Green baby character -->
     <ImageView
         android:id="@+id/imgGreenBaby"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="100dp"
-        android:src="@drawable/green_baby"
-        android:layout_toEndOf="@id/imgPuddingBaby"
-        android:layout_alignBottom="@id/imgPuddingBaby"
-        android:layout_marginStart="8dp" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="Green sharing character"
+        android:src="@drawable/share" />
 
-    <!-- Share section -->
-
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="82dp"
-        android:layout_marginTop="102dp"
-        android:layout_toEndOf="@id/imgChickenLeg"
-        android:backgroundTint="#C39BD3"
-        android:text="Save"
-        android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/btnHome"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/btnSave"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="58dp"
-        android:layout_toEndOf="@id/imgChickenLeg"
-        android:backgroundTint="#C39BD3"
-        android:text="Home"
-        android:textColor="#fff" />
-
-    <LinearLayout
-        android:id="@+id/shareSection"
+    <!-- Social media sharing buttons grid -->
+    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/btnSave"
+        android:layout_marginStart="170dp"
+        android:layout_marginTop="8dp"
+        android:alignmentMode="alignMargins"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:translationX="-90dp"
+        android:translationY="50dp"
+        android:useDefaultMargins="true">
+
+        <!-- Twitter Button -->
+        <ImageButton
+            android:id="@+id/btnShareTwitter"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Share on Twitter"
+            android:src="@drawable/twitter" />
+
+        <!-- Instagram Button -->
+        <ImageButton
+            android:id="@+id/btnShareInstagram"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Share on Instagram"
+            android:src="@drawable/instagram" />
+
+        <!-- WhatsApp Button -->
+        <ImageButton
+            android:id="@+id/btnShareWhatsapp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Share on WhatsApp"
+            android:src="@drawable/whatsapp" />
+
+        <!-- Facebook Button -->
+        <ImageButton
+            android:id="@+id/btnShareFacebook"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Share on Facebook"
+            android:src="@drawable/facebook" />
+    </GridLayout>
+
+    <!-- Camera preview area for selfie -->
+    <androidx.camera.view.PreviewView
+        android:id="@+id/cameraPreview"
+        android:layout_width="380dp"
+        android:layout_height="220dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:background="#C0C0C0" />
+
+    <!-- Dish image in top right -->
+    <ImageView
+        android:id="@+id/dish"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:contentDescription="Dish"
+        android:src="@drawable/dish" />
+
+    <!-- Cloud with rainbow and character at bottom -->
+    <ImageView
+        android:id="@+id/imgCloud"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="80dp"
+        android:contentDescription="Cloud with rainbow"
+        android:src="@drawable/cloud"
+        android:translationX="10dp" />
+
+    <!-- Home button -->
+    <ImageButton
+        android:id="@+id/btnHome"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="4dp"
-        android:layout_toEndOf="@id/btnHome"
-        android:background="#FFF8DC"
-        android:orientation="horizontal"
-        android:padding="15dp">
-
-        <TextView
-            android:id="@+id/textShare"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingBottom="8dp"
-            android:text="Share"
-            android:textColor="#E91E63"
-            android:textStyle="bold" />
-
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:rowCount="2"
-            android:useDefaultMargins="true"
-            android:layout_marginTop="8dp">
-
-            <ImageButton
-                android:id="@+id/btnShareWhatsapp"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/whatsapp"
-                android:background="@android:color/transparent"
-                android:contentDescription="Share on WhatsApp" />
-
-            <ImageButton
-                android:id="@+id/btnShareInstagram"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/instagram"
-                android:background="@android:color/transparent"
-                android:contentDescription="Share on Instagram" />
-
-            <ImageButton
-                android:id="@+id/btnShareTwitter"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/twitter"
-                android:background="@android:color/transparent"
-                android:contentDescription="Share on Twitter" />
-
-            <ImageButton
-                android:id="@+id/btnShareFacebook"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/facebook"
-                android:background="@android:color/transparent"
-                android:contentDescription="Share on Facebook" />
-        </GridLayout>
-
-    </LinearLayout>
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/back"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        android:contentDescription="Home button" />
 
 </RelativeLayout>
