--- a/CookingGameApp/app/src/main/res/layout/activity_endscreen.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_endscreen.xml
@@ -86,13 +86,14 @@
     <!-- Dish image in top right -->
     <ImageView
         android:id="@+id/dish"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="Dish"
-        android:src="@drawable/dish" />
+        android:src="@drawable/dish"
+        android:translationX="-40dp" />
 
     <!-- Cloud with rainbow and character at bottom -->
     <ImageView
