--- a/CookingGameApp/app/src/main/res/layout/activity_enter_room.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_enter_room.xml
@@ -1,75 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <!-- Background Image -->
     <ImageView
         android:id="@+id/imageBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/hostbackground"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
-        android:contentDescription="@null" />
+        android:src="@drawable/hostbackground"
+        android:contentDescription="@null"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Join Button -->
-    <ImageButton
-        android:id="@+id/buttonStart"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="start|center_vertical"
-        android:layout_marginStart="40dp"
-        android:translationY="-80dp"
-        android:src="@drawable/joinbutton"
-        android:scaleType="fitXY"
-        android:background="@null"
-        android:contentDescription="Join" />
 
     <!-- Kirby Image -->
+
+    <ImageButton
+        android:id="@+id/buttonStart"
+        android:layout_width="105dp"
+        android:layout_height="103dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@null"
+        android:contentDescription="Join"
+        android:scaleType="fitXY"
+        android:src="@drawable/joinbutton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.004"
+        app:layout_constraintWidth_percent="0.2" />
+
     <ImageView
         android:id="@+id/imageKirby"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_gravity="end|center_vertical"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/kirby"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="Kirby Character"
         android:scaleType="fitCenter"
-        android:contentDescription="Kirby Character" />
+        android:src="@drawable/kirby"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.35" />
 
     <!-- Room Code Input Block -->
     <LinearLayout
+        android:id="@+id/roomCodeBlock"
+        android:layout_width="331dp"
+        android:layout_height="138dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center_horizontal">
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/imageKirby"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toEndOf="@id/buttonStart"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.446">
 
         <TextView
             android:id="@+id/textJoinRoomLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:fontFamily="@font/baloo"
             android:text="Join a room"
-            android:textSize="36sp"
-            android:textStyle="bold"
             android:textColor="#FF5722"
-            android:fontFamily="@font/baloo" />
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editRoomCode"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:hint="Please enter room code"
-            android:textColor="#FFB6B3"
-            android:textColorHint="#FFB6B3"
-            android:textSize="20sp"
-            android:fontFamily="@font/baloo"
             android:background="@drawable/rounded_room_code_bg"
-            android:padding="10dp"
+            android:fontFamily="@font/baloo"
+            android:gravity="center"
+            android:hint="Enter room code"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:maxLength="6"
-            android:gravity="center"
-            android:importantForAutofill="no" />
+            android:padding="12dp"
+            android:textColor="#FFB6B3"
+            android:textColorHint="#FFB6B3"
+            android:textSize="18sp" />
     </LinearLayout>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
