--- a/CookingGameApp/app/src/main/res/layout/activity_settings.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_settings.xml
@@ -1,13 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/settingsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
     android:padding="24dp"
     android:background="@drawable/menubackground">
 
-    <!-- Custom centered title -->
+    <!-- Title -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
@@ -15,34 +15,41 @@
         android:text="Settings"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="32dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Horizontal layout for volume and music controls -->
+    <!-- Horizontal layout container using percent width -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:id="@+id/controlLayout"
+        android:layout_width="599dp"
+        android:layout_height="181dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
-        android:weightSum="2">
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleText"
+        app:layout_constraintWidth_percent="0.9">
 
-        <!-- Volume Section with rounded background -->
+        <!-- Volume Section -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="29dp"
+            android:layout_height="79dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="8dp"
             android:background="@drawable/rounded_light_blue"
-            android:layout_margin="8dp">
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <TextView
                 android:id="@+id/volumeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Music Volume"
-                android:textSize="16sp"
-                android:layout_marginBottom="8dp" />
+                android:textSize="16sp" />
 
             <SeekBar
                 android:id="@+id/volumeSeekBar"
@@ -51,28 +58,28 @@
                 android:max="100" />
         </LinearLayout>
 
-        <!-- Music Selector Section with rounded background -->
+        <!-- Music Selection Section -->
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="8dp"
             android:background="@drawable/rounded_light_blue"
-            android:layout_margin="8dp">
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <TextView
                 android:id="@+id/musicLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Select Music"
-                android:textSize="16sp"
-                android:layout_marginBottom="8dp" />
+                android:textSize="16sp" />
 
             <Spinner
                 android:id="@+id/musicSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_width="251dp"
+                android:layout_height="36dp" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
