--- a/CookingGameApp/app/src/main/res/layout/activity_waiting.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_waiting.xml
@@ -1,51 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="#F5F5DC">
 
+    <!-- Background Frame for Recipe Board -->
+
     <FrameLayout
-        android:layout_width="564dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/empty_board"
-        android:paddingTop="100dp">
+        android:id="@+id/recipeContainer"
+        android:layout_width="596dp"
+        android:layout_height="372dp"
+        android:background="@drawable/recipebackground"
+        android:paddingTop="110dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintWidth_percent="0.9">
 
+        <!-- Vertical layout inside the recipe frame -->
         <LinearLayout
-            android:layout_width="326dp"
+            android:layout_width="335dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingBottom="10dp">
-            <!-- Table Layout for Cooking Ware -->
+            android:paddingTop="10dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo_regular"
-                android:gravity="center"
-                android:text="@string/recipe_header"
-                android:textColor="#F75526"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+            <!-- Table Section -->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
                 android:orientation="vertical">
+
                 <!-- Table Header -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baloo_regular"
+                    android:gravity="center"
+                    android:text="@string/recipe_header"
+                    android:textColor="#F75526"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         style="@style/Tabletext"
-                        android:layout_width="4dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
@@ -54,7 +67,7 @@
 
                     <TextView
                         style="@style/Tabletext"
-                        android:layout_width="6dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
@@ -62,12 +75,11 @@
                         android:textSize="18sp" />
                 </LinearLayout>
 
-                <!-- Table Rows -->
+                <!-- Table Row 1 -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <TextView
@@ -89,6 +101,7 @@
                         android:textSize="16sp" />
                 </LinearLayout>
 
+                <!-- Table Row 2 -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -114,6 +127,7 @@
                         android:textSize="16sp" />
                 </LinearLayout>
 
+                <!-- Table Row 3 -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -139,6 +153,7 @@
                         android:textSize="16sp" />
                 </LinearLayout>
 
+                <!-- Table Row 4 -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -162,22 +177,22 @@
                         android:text="@string/cookware_row_4"
                         android:textSize="16sp" />
                 </LinearLayout>
+
             </LinearLayout>
-
         </LinearLayout>
-
     </FrameLayout>
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:layout_gravity="bottom|start"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@null"
-        android:contentDescription="Back"
+        android:contentDescription="@string/back"
         android:scaleType="fitCenter"
-        android:src="@drawable/back" />
+        android:src="@drawable/back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
